--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
   <div>
     <iframe width="420" height="315" src="https://www.youtube.com/embed/cOA9ctET5MA" frameborder="0" allowfullscreen></iframe>
   </div>
+  <div>
+    <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmonteron.github.io%2Ftetris.&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
+  </div>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
