--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   <div>
     <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmonteron.github.io%2Ftetris.&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:80px;" allowTransparency="true"></iframe>
   </div>
+  <div>
+    <button type="btn btn-primary btn-lg btn-block"></button>
+  </div>
 
   <p>
     This game was inspired by Tetris. The goal of this game is to clear blocks throughout the screen while there are blocks that are still continuously falling until the game is over.
