--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
   <div>
     <button type="btn btn-primary btn-lg btn-block"></button>
   </div>
-
+ <aside id="sidebar">
+ 
+          <a href="https://github.com/monteron/tetris/releases/download/1/dist.zip" class="button">
+            <small>EXE</small>
+            .zip file
+          </a>
+          <a href="" class="button">
+            <small>Source</small>
+           .zip file
+          </a>
   <p>
     This game was inspired by Tetris. The goal of this game is to clear blocks throughout the screen while there are blocks that are still continuously falling until the game is over.
   </p>
